classDiagram
    class Task {
        +str name
        +int duration
        +str priority
        +str frequency
        +str time
        +str due_date
        +bool completed
        +mark_complete()
        +reset()
        +next_occurrence() Task
    }

    class Pet {
        +str name
        +str species
        +int age
        +str special_needs
        +list tasks
        +add_task(task)
        +remove_task(task)
        +get_pending_tasks() list
    }

    class Owner {
        +str name
        +int available_time
        +str preferences
        +list pets
        +add_pet(pet)
        +get_all_tasks() list
        +get_all_pending_tasks() list
    }

    class Scheduler {
        +Owner owner
        +get_conflicts() dict
        +generate_plan() list
        +handle_completion(pet, task)
        +sort_tasks_by_time() list
        +filter_tasks(completed, pet_name) list
        +get_summary() str
        -_get_pending_with_pets() list
    }

    Pet "1" --> "*" Task : has
    Owner "1" --> "*" Pet : owns
    Scheduler "1" --> "1" Owner : reads from
    Task ..> Task : next_occurrence()
